# spindle-zig

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  _back_CMakeLists.txt  _back_CMakeLists.txt-1  _back_CMakeLists.txt-2  build-cpp.sh  build-deps-root.sh  build-deps-static.sh  build-deps.sh  build.zig  build.zig.zon  deps-build.sh  exe_CMakeLists.txt
cpp/: bindings.cpp  bindings.h  compile.sh  main.cpp
docker/: Dockerfile
src/: bindings.h  main.zig
